Removed java sources as a default argument